@@ -2,6 +2,15 @@
 
 	reviewed by: Marc André Lureau
 
+	* flumotion/component/dvb/admin_gtk.py:
+	Add DecoderBaseAdminGtk class and make MegTS and DVB use it.
+	DVB base class was only used by the DVB admin while the decoder base
+	class makes more sense since both MpegTS and DVB will share effects code.
+
+2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Marc André Lureau
+
 	* flumotion/component/dvb/dvb.py:
 	Add deinterlace effect to dvb and mpegts producer
 
